<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="menu_new_game">New game</string>
    <string name="menu_preferences">Preferences</string>
    <string name="pref_title_size">Board size</string>
    <string name="pref_title_symbols">Player symbols</string>
    <string name="pref_title_colours">Colours</string>
    <string name="pref_game_settings">Game preferences</string>
    <string name="pref_size_default">8</string>
    <string name="pref_symbol_default">1</string>
    <string name="pref_colour_default">green</string>
    <string name="title_activity_settings">Settings</string>
</resources>
